; ModuleID = '/home/carl/AnghaBench/git/extr_wt-status.c_has_uncommitted_changes.c'
source_filename = "/home/carl/AnghaBench/git/extr_wt-status.c_has_uncommitted_changes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }
%struct.repository = type { i32 }
%struct.rev_info = type { %struct.TYPE_9__, %struct.TYPE_7__ }
%struct.TYPE_9__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32, i32 }
%struct.TYPE_7__ = type { i32 }
%struct.tree = type { i32 }

@the_hash_algo = common dso_local global %struct.TYPE_8__* null, align 8
@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @has_uncommitted_changes(%struct.repository* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.repository*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.rev_info, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.tree*, align 8
  store %struct.repository* %0, %struct.repository** %4, align 8
  store i32 %1, i32* %5, align 4
  %9 = load %struct.repository*, %struct.repository** %4, align 8
  %10 = getelementptr inbounds %struct.repository, %struct.repository* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i64 @is_index_unborn(i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %49

15:                                               ; preds = %2
  %16 = load %struct.repository*, %struct.repository** %4, align 8
  %17 = call i32 @repo_init_revisions(%struct.repository* %16, %struct.rev_info* %6, i32* null)
  %18 = load i32, i32* %5, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %15
  %21 = getelementptr inbounds %struct.rev_info, %struct.rev_info* %6, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 0
  store i32 1, i32* %23, align 4
  br label %24

24:                                               ; preds = %20, %15
  %25 = getelementptr inbounds %struct.rev_info, %struct.rev_info* %6, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %26, i32 0, i32 1
  store i32 1, i32* %27, align 4
  %28 = call i32 @add_head_to_pending(%struct.rev_info* %6)
  %29 = getelementptr inbounds %struct.rev_info, %struct.rev_info* %6, i32 0, i32 1
  %30 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %42, label %33

33:                                               ; preds = %24
  %34 = load %struct.repository*, %struct.repository** %4, align 8
  %35 = load %struct.TYPE_8__*, %struct.TYPE_8__** @the_hash_algo, align 8
  %36 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = call %struct.tree* @lookup_tree(%struct.repository* %34, i32 %37)
  store %struct.tree* %38, %struct.tree** %8, align 8
  %39 = load %struct.tree*, %struct.tree** %8, align 8
  %40 = getelementptr inbounds %struct.tree, %struct.tree* %39, i32 0, i32 0
  %41 = call i32 @add_pending_object(%struct.rev_info* %6, i32* %40, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  br label %42

42:                                               ; preds = %33, %24
  %43 = getelementptr inbounds %struct.rev_info, %struct.rev_info* %6, i32 0, i32 0
  %44 = call i32 @diff_setup_done(%struct.TYPE_9__* %43)
  %45 = call i32 @run_diff_index(%struct.rev_info* %6, i32 1)
  store i32 %45, i32* %7, align 4
  %46 = getelementptr inbounds %struct.rev_info, %struct.rev_info* %6, i32 0, i32 0
  %47 = load i32, i32* %7, align 4
  %48 = call i32 @diff_result_code(%struct.TYPE_9__* %46, i32 %47)
  store i32 %48, i32* %3, align 4
  br label %49

49:                                               ; preds = %42, %14
  %50 = load i32, i32* %3, align 4
  ret i32 %50
}

declare dso_local i64 @is_index_unborn(i32) #1

declare dso_local i32 @repo_init_revisions(%struct.repository*, %struct.rev_info*, i32*) #1

declare dso_local i32 @add_head_to_pending(%struct.rev_info*) #1

declare dso_local %struct.tree* @lookup_tree(%struct.repository*, i32) #1

declare dso_local i32 @add_pending_object(%struct.rev_info*, i32*, i8*) #1

declare dso_local i32 @diff_setup_done(%struct.TYPE_9__*) #1

declare dso_local i32 @run_diff_index(%struct.rev_info*, i32) #1

declare dso_local i32 @diff_result_code(%struct.TYPE_9__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
